--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -20,6 +20,32 @@
            {{/link-to}}
          </ul>
        </ul>
+       <ul class="nav navbar-nav navbar-left">
+         <ul class="nav navbar-nav navbar-left">
+           {{#link-to "index"}}
+           <li class="navbar-text">Categories</li>
+           {{/link-to}}
+         </ul>
+       </ul>
+       <ul class="nav navbar-nav navbar-left">
+         <ul class="nav navbar-nav navbar-left">
+           {{#link-to "index"}}
+           <li class="navbar-text">Log In</li>
+           {{/link-to}}
+         </ul>
+       </ul>
+       <ul class="nav navbar-nav navbar-left">
+         <ul class="nav navbar-nav navbar-left">
+           {{input value=searchTerm id="searchTerm" placeholder="enter your search term here"}}
+           <button type="button" name="button">Search</button>
+         </ul>
+       </ul>
      </nav>
    </div>
-{{outlet}}
+   <div class="col-sm-9">
+     {{outlet}}
+
+   </div>
+   <div class="col-sm-3">
+     <h1>Shopping Cart</h1>
+   </div>
