--- a/app/templates/components/new-item.hbs
+++ b/app/templates/components/new-item.hbs
@@ -1,4 +1,5 @@
 <div class="well">
+  <h1>New Item</h1>
   <label for="">Name:</label>
 {{input value=name id="name"}}
 <label for="">Price:</label>
