--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,3 @@
-{{new-item item=item createNewProduct="createNewProduct"}}
+{{new-item createNewProduct="createNewProduct"}}
+{{item-tile items=model.items }}
+{{new-category addNewCategory="addNewCategory"}}
