--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -41,11 +41,20 @@
          </ul>
        </ul>
      </nav>
-   </div>
+
+
+   <nav class="nav navbar-default navbar-fixed-top nav2">
+     <ul class="nav navbar-nav ">
+       <h1>Categories</h1>
+       {{category-display categories=model.categories}}
+     </ul>
+   </nav>
+ </div>
+
    <div class="col-sm-9">
      {{outlet}}
-
    </div>
    <div class="col-sm-3">
      <h1>Shopping Cart</h1>
+     {{cart-display}}
    </div>
