remove item updates

--- a/app/templates/components/cart-display.hbs
+++ b/app/templates/components/cart-display.hbs
@@ -1,8 +1,11 @@
-{{#each cart.items as |item|}}
-<div class="panel">
-    <li>Name: {{item.name}}</li>
-    <img src="{{item.image}}" alt="" onerror='this.src="https://heatherchristenaschmidt.files.wordpress.com/2011/09/facebook_no_profile_pic2-jpg.gif"' />
-    Description: {{item.description}}
-    Price: {{item.price}}
-</div>
-{{/each}}
+{{#if refresh}}
+  {{#each cart.items as |item|}}
+  <div class="panel">
+      <li>Name: {{item.name}}</li>
+      <img src="{{item.image}}" alt="" onerror='this.src="https://heatherchristenaschmidt.files.wordpress.com/2011/09/facebook_no_profile_pic2-jpg.gif"' />
+      Description: {{item.description}}
+      Price: {{item.price}}
+      <button class="btn btn-danger"{{action "removeItem" item}}>X</button>
+  </div>
+  {{/each}}
+{{/if}}
