add destroy record functionality

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,3 @@
 {{new-item createNewProduct="createNewProduct"}}
-{{item-tile items=model.items }}
+{{item-tile items=model.items destroy1="destroy"}}
 {{new-category addNewCategory="addNewCategory"}}
