--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -5,3 +5,16 @@ body{
   margin-top: 50px;
   background: black;
 }
+.panel{
+  position: relative;
+  width: 200px;
+}
+.panel .destroy{
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: none;
+}
+.panel:hover .destroy{
+  display: inline-block;
+}
