--- a/app/templates/components/item-tile.hbs
+++ b/app/templates/components/item-tile.hbs
@@ -5,5 +5,6 @@
       Description: {{item.description}}
       Price: {{item.price}}
       <button {{action "addToCart" item}}>Add to Cart</button>
+      <button class="btn btn-danger destroy"{{action "destroyItem" item}}>X</button>
   </div>
 {{/each}}
