--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -5,6 +5,11 @@ body{
   margin-top: 50px;
   background: black;
 }
+.nav2 * {
+  color: white;
+  font-size: 1.2em;
+  display: inline-block;
+}
 .panel{
   position: relative;
   width: 200px;
