--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,3 @@
-{{new-item createNewProduct="createNewProduct"}}
-{{item-tile items=model.items destroy1="destroy"}}
+{{new-item createNewProduct="createNewProduct" categories=model.categories}}
+{{item-tile items=model.items destroy1="destroy" categories=model.categories}}
 {{new-category addNewCategory="addNewCategory"}}
