--- a/app/templates/components/new-item.hbs
+++ b/app/templates/components/new-item.hbs
@@ -15,5 +15,5 @@
     <option value="{{category.id}}">{{category.name}}</option>
     {{/each}}
   </select>
-<button {{action "createNewProduct" }}>Submit</button>
+<button {{action "createNewProduct" }} class="dimond">Submit</button>
 </div>
