--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,5 +1,12 @@
+
 body{
   margin-top: 120px;
+  /*background: url('http://www.clipartkid.com/images/242/diamond-outline-vector-feYHAo-clipart.jpeg') center center no-repeat;
+  background-size: 30%;
+  background-attachment: fixed;*/
+}
+.well{
+    background: transparent;
 }
 .nav2{
   margin-top: 50px;
@@ -24,21 +31,57 @@ body{
   display: inline-block;
 }
 .panel{
-  border: 1px dashed black;
   padding: 10px;
   padding-left: 20px;
   padding-bottom: 20px;
   background: white;
+  border: 1px solid black !important;
 }
+
 .underlay{
-  background: yellow;
+  background: black;
   width: 200px !important;
 }
 .underLay:hover {
   background: url('https://media.giphy.com/media/xTiTnjN449n3p63LVe/giphy.gif');
   width: 200px !important;
-
 }
+
 .panel:hover{
   background: white;
+}
+.itemArea > *{
+    display: inline-block;
+}
+.catLink:hover a{
+    border: 1px solid rgba(0,0,0,0.2);
+    background: rgba(0,22,0,0.1);
+    text-decoration: none !important;
+}
+.caLinkCatDisplay:hover li{
+    background-color: white;
+    color: black !important;
+    border:  3px solid gold;
+    border-style: inset;
+    padding: 0 !important;
+}
+
+/*diamond styling*/
+
+body {
+  font-family:futura;
+  color:white;
+  /*background-image:
+    -webkit-linear-gradient(125deg, transparent 30%, rgba(255,165,0, 0.75)),
+    -webkit-linear-gradient(45deg, #207261, #002B36);
+  background-image:
+    -moz-linear-gradient(125deg, transparent 30%, rgba(255,165,0, 0.75)),
+    -moz-linear-gradient(45deg, #207261, #002B36);
+  background-image:
+    -o-linear-gradient(125deg, transparent 30%, rgba(255,165,0, 0.75)),
+    -o-linear-gradient(45deg, #207261, #002B36);*/
+  background-image:
+    linear-gradient(125deg, transparent 30%, rgba(255,165,0, 0.75)),
+    linear-gradient(45deg, #207261, #002B36);
+
 }
