--- a/app/templates/components/category-display.hbs
+++ b/app/templates/components/category-display.hbs
@@ -1,4 +1,4 @@
 
 {{#each categories as |category|}}
-  <li>{{category.name}}</li>
+  {{#link-to 'category' category.id class="caLinkCatDisplay"}}<li>{{category.name}}</li>{{/link-to}}
 {{/each}}
