add new user model and compnoent

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,3 +3,4 @@
     {{item-tile items=model.items destroy1="destroy" categories=model.categories addCategoryToItem="addCategoryToItem"}}
 </div>
 {{new-category addNewCategory="addNewCategory"}}
+{{new-user createNewUser="createNewUser"}}
