fix transition to to proper scope of this on create new item, assign proper category ID field to add category to item

--- a/app/templates/components/item-tile.hbs
+++ b/app/templates/components/item-tile.hbs
@@ -17,7 +17,7 @@
       <button class="btn btn-danger destroy"{{action "destroyItem" item}}>X</button>
   </div>
 
-  <select id="category_id2">
+  <select id="category_id2{{item.id}}">
     {{#each categories as |category|}}
     <option value="{{category.id}}">{{category.name}}</option>
     {{/each}}
