--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -5,3 +5,4 @@
 {{new-category addNewCategory="addNewCategory"}}
 {{new-user createNewUser="createNewUser"}}
 {{sign-in signIn="signIn"}}
+{{log model.user}}
