--- a/app/templates/components/new-item.hbs
+++ b/app/templates/components/new-item.hbs
@@ -8,6 +8,8 @@
 {{input value=image id="image"}}
 <label for="">Description:</label>
 {{input value=description id="description"}}
+<label for="">Quantity In Stock:</label>
+{{input value=quantityInStock id="quantityInStock"}}
   <h2>Add a category</h2>
   <label for="">Category Name</label>
   <select id="category_id">
