--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -84,3 +84,23 @@ body {
     linear-gradient(45deg, #207261, #002B36);
 
 }
+
+.star{
+    cursor: pointer;
+}
+.starBox:hover .star{
+    color: yellow;
+    text-shadow: 0 0 1px grey;
+
+}
+.star:hover .star{
+    color: yellow;
+    text-shadow: 0 0 1px grey;
+}
+div .star:hover,
+div .star:hover ~ .star  {
+  color: black;
+}
+.lit{
+  color: pink;
+}
